--- a/src/Server/AspNetClassic.Abstractions/AspNetClassic.Abstractions.csproj
+++ b/src/Server/AspNetClassic.Abstractions/AspNetClassic.Abstractions.csproj
@@ -18,6 +18,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="HotChocolate" Version="10.5.5" />
     <PackageReference Include="Microsoft.Owin" Version="4.0.0" />
   </ItemGroup>
 
