--- a/src/Server/AspNetClassic.Abstractions/AspNetClassic.Abstractions.csproj
+++ b/src/Server/AspNetClassic.Abstractions/AspNetClassic.Abstractions.csproj
@@ -18,7 +18,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="HotChocolate" Version="10.5.5" />
+    <PackageReference Include="HotChocolate" Version="12.6.0" />
+    <PackageReference Include="HotChocolate.Subscriptions" Version="12.6.0" />
+    <PackageReference Include="HotChocolate.Subscriptions.InMemory" Version="12.6.0" />
+    <PackageReference Include="HotChocolate.Types" Version="12.6.0" />
     <PackageReference Include="Microsoft.Owin" Version="4.0.0" />
   </ItemGroup>
 
