--- a/src/Server/AspNetClassic.Abstractions/AspNetClassic.Abstractions.csproj
+++ b/src/Server/AspNetClassic.Abstractions/AspNetClassic.Abstractions.csproj
@@ -23,6 +23,7 @@
     <PackageReference Include="HotChocolate.Subscriptions.InMemory" Version="12.6.0" />
     <PackageReference Include="HotChocolate.Types" Version="12.6.0" />
     <PackageReference Include="Microsoft.Owin" Version="4.0.0" />
+    <PackageReference Include="System.IO.Pipelines" Version="4.5.3" />
   </ItemGroup>
 
 </Project>
