--- a/src/AspNetClassic/HotChocolate.AspNetClassic.csproj
+++ b/src/AspNetClassic/HotChocolate.AspNetClassic.csproj
@@ -47,6 +47,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
     <PackageReference Include="Microsoft.Owin" Version="4.2.0" />
     <PackageReference Include="System.IO.Pipelines" Version="6.0.1" />
+    <PackageReference Include="System.Text.Json" Version="6.0.1" />
   </ItemGroup>
 
 </Project>
